added github stuff and fixed tp and list command